--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -136,4 +136,15 @@ pre { background-color: var(--background-color);  border: none;  padding: 0;  ma
 img {
     max-width: 100%;
     height: auto;
+
+    &.aspect-video {
+        aspect-ratio: 16 / 9;
+        object-fit: cover;
+    }
+    
+    &.square {
+        aspect-ratio: 1 / 1;
+        object-fit: cover;
+    }
+
 }
